# cuda_sparse_sim

./: README.md  fast_test.cc  test.py  test_1block.py  test_data.py  test_kernel_simulation.py  test_record_block.py
compute_analysis/: ops_cycle.config  setup.py  spmm.py
compute_analysis/benchmarking/: bench_mma_m16n8k4.cu  bench_mma_m16n8k8.cu  bench_wmma_m16n16k8.cu  devicequery.cpp  fine_grain_Kepler_readOnly.cpp1.ii  fine_grain_Kepler_readOnly.cpp4.ii  fine_grain_Kepler_readOnly.cu  fine_grain_Kepler_readOnly.cudafe1.c  fine_grain_Kepler_readOnly.cudafe1.cpp  fine_grain_Kepler_readOnly.cudafe1.stub.c  fine_grain_Kepler_readOnly.fatbin.c  fine_grain_TLB.cu  fma.cu  global.cu  global_latency.cu  ima.cu  readonly_dlink.fatbin.c  shared_latency.cu  test_smid.cu
compute_analysis/src/: gat_kernels.cu  spmm_compare.cu  spmm_compare.cuh
data_flow_analysis/: TCGNN.py  data.py  setup.py
data_flow_analysis/src/: CMakeLists.txt  DTC.cu  DTC.cuh
